[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/UI components/DIALOG/Dialog_box.gd" type="Script" id=1]
[ext_resource path="res://assets/dialogue.tres" type="Texture" id=2]
[ext_resource path="res://assets/button_dialogue.tres" type="Theme" id=3]
[ext_resource path="res://Scenes/assets/theme_font.tres" type="Theme" id=4]
[ext_resource path="res://assets/GAME_FONT.tres" type="DynamicFont" id=5]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 238, 46 )

[sub_resource type="Theme" id=2]
WindowDialog/colors/title_color = Color( 0, 0, 0, 1 )
WindowDialog/constants/close_h_ofs = 18
WindowDialog/constants/close_v_ofs = 18
WindowDialog/constants/scaleborder_size = 4
WindowDialog/constants/title_height = 20
WindowDialog/fonts/title_font = ExtResource( 5 )
WindowDialog/icons/close = null
WindowDialog/icons/close_highlight = null
WindowDialog/styles/panel = SubResource( 1 )

[node name="Dialog_box" type="Node2D"]
script = ExtResource( 1 )

[node name="WindowDialog" type="WindowDialog" parent="."]
visible = true
margin_top = 400.0
margin_right = 1016.0
margin_bottom = 592.0
theme = SubResource( 2 )
popup_exclusive = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="WindowDialog"]
margin_left = 864.0
margin_top = 40.0
margin_right = 904.0
margin_bottom = 108.0
custom_constants/vseparation = 28
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Yes" type="Button" parent="WindowDialog/GridContainer"]
margin_right = 22.0
margin_bottom = 14.0
theme = ExtResource( 3 )
text = "Yes"

[node name="No" type="Button" parent="WindowDialog/GridContainer"]
margin_top = 42.0
margin_right = 22.0
margin_bottom = 56.0
theme = ExtResource( 3 )
text = "No"

[node name="GridContainer2" type="GridContainer" parent="WindowDialog"]
visible = false
margin_left = 824.0
margin_top = 40.0
margin_right = 924.0
margin_bottom = 156.0
custom_constants/vseparation = 28
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player_PC" type="Button" parent="WindowDialog/GridContainer2"]
margin_right = 100.0
margin_bottom = 20.0
text = "%s"

[node name="Bill_PC" type="Button" parent="WindowDialog/GridContainer2"]
margin_top = 48.0
margin_right = 100.0
margin_bottom = 68.0
text = "Bill's PC"

[node name="Oak_PC" type="Button" parent="WindowDialog/GridContainer2"]
margin_top = 96.0
margin_right = 100.0
margin_bottom = 116.0
text = "Prof. Oak's PC"

[node name="Label" type="Label" parent="WindowDialog"]
margin_left = 48.0
margin_top = 40.0
margin_right = 680.0
margin_bottom = 152.0
theme = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "%s"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Next" type="Button" parent="WindowDialog"]
margin_left = 760.0
margin_top = 136.0
margin_right = 802.0
margin_bottom = 156.0
theme = ExtResource( 3 )
text = "Next"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="WindowDialog/GridContainer/Yes" to="." method="_on_Yes_pressed"]
[connection signal="pressed" from="WindowDialog/GridContainer/No" to="." method="_on_No_pressed"]
[connection signal="pressed" from="WindowDialog/GridContainer2/Player_PC" to="." method="_on_Player_PC_pressed"]
[connection signal="pressed" from="WindowDialog/GridContainer2/Bill_PC" to="." method="_on_Bill_PC_pressed"]
[connection signal="pressed" from="WindowDialog/GridContainer2/Oak_PC" to="." method="_on_Oak_PC_pressed"]
[connection signal="pressed" from="WindowDialog/Next" to="." method="_on_Next_pressed"]
